# cbs_hist_downloader

./: LICENSE  MANIFEST.in  README.md  instructions.txt  setup.cfg  setup.py
cbs_hist_downloader/: find_next_page.py  scrape_book.py
cbs_hist_downloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cbs_hist_downloader/cbs_hist_downloader.egg-info/: PKG-INFO
