[metadata]
name = cbs_hist_downloader
author = Bas Machieslen
author_email = basmachielsen@live.nl
description = A python program for downloading images from CBS historisch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/basm92/cbs_hist_downloader
project_urls =
    Bug Tracker = https://github.com/basm92/cbs_hist_downloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6


